# libowa_ffi

./: ffigen.yaml  pubspec.yaml
example/: libowa_ffi.dart
lib/: libowa_ffi.dart
lib/src/: libowa_base.dart  oswrapper_audio.dart
src/: CMakeLists.txt  oswrapper_audio.c
